update docs to docusaurus v3

--- a/docs/smartAccountv1/tutorials/React_vite/sdk-integration.mdx
+++ b/docs/smartAccountv1/tutorials/React_vite/sdk-integration.mdx
@@ -238,7 +238,7 @@ step-by-step explanation of what it does:
 
 **Setting up BiconomySmartAccount:**
 
-6. **`const biconomySmartAccountConfig`: BiconomySmartAccountConfig = { ... }:**
+6. **`const biconomySmartAccountConfig`**
    Creates a configuration object for setting up the BiconomySmartAccount. The
    configuration includes the following properties:
 
