--- a/docs/Account/integration.mdx
+++ b/docs/Account/integration.mdx
@@ -1,5 +1,8 @@
 ---
 sidebar_position: 2
+custom_edit_url: https://github.com/bcnmy/docs/blob/master/docs/Account/integration.mdx
+last_update:
+  date: 11/16/2023
 ---
 # Integration
 
