--- a/docs/Bundler/integration.mdx
+++ b/docs/Bundler/integration.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 2
+custom_edit_url: https://github.com/bcnmy/docs/blob/master/docs/Bundler/integration.mdx
 ---
 # Integration
 
