--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -5,7 +5,7 @@ sidebar_position: 2
 
 # Quickstart: Smart Account Native Transfer
 
-In this guide, we will walk through creating a basic Node.js script using **TypeScript** with an implementation of the **Smart Account Package** from the Biconomy SDK. You will learn how to create a smart account and perform user operations by sending a native transfer of tokens. 
+In this guide, we will create a basic Node.js script using **TypeScript** with an implementation of the **Smart Account Package** from the Biconomy SDK. You will learn how to create a **Smart Account** and perform **user operations** by sending a native transfer of tokens. 
 
 :::info
 Please note that this tutorial assumes you have Node JS installed on your computer and have some working knowledge of Node.
@@ -23,39 +23,40 @@ We will clone a preconfigured Node.js project with TypeScript support to get sta
 git clone git@github.com:bcnmy/quickstart.git
 ```
 
-Note that this is the ssh example, use http or GithubCli options if you prefer. 
+Note that this is the `SSH` example. Use `HTTP` or `GithubCli` options if you prefer. 
 
 ```bash
 git clone https://github.com/bcnmy/quickstart.git
 ```
 
-Once you have the repository on your local machine - start by installing all dependencies using your preferred package manager. In this tutorial we will use yarn.
+Once you have the repository on your local machine, install all dependencies using your preferred package manager. In this tutorial, we will use `yarn`.
 
 ```bash
 yarn install
 yarn dev
 ```
-After running these two commands you should see the printed statement “Hello World!” in your terminal. Any changes made to the `index.ts` file in the src directory should now automatically run in your terminal upon save. 
+After running these two commands you should see the printed statement `Hello World!` in your terminal. 
+Any changes made to the `index.ts` file in the src directory should now automatically run in your terminal upon saving. 
 
-All packages you need for this guide are all configured and installed for you, check out the `package.json` file if you want to explore the dependencies.
+All packages you need for this guide are configured and installed for you. Check out the `package.json` file if you want to explore the dependencies.
 
 <details>
   <summary> Click to learn more about the packages </summary>
 
-- The account package will help you with creating smart contract accounts and an interface with them to create transactions.
-- The bundler package helps you with interacting with our bundler or alternatively another bundler of your choice.
-- The paymaster package works similarly to the bundler package in that you can use our paymaster or any other one of your choice.
-- The core types package will give us Enums for the proper ChainId we may want to use.
-- The modules package gives us access to the different modules we publish for the biconomy sdk.
-- The common package is needed by our accounts package as another dependency.
-- Finally the ethers package at version 5.7.2 will help us with giving our accounts an owner which will be our own EOA.
+- The **Account package** will help you with creating **Smart Account** and an interface with them to create transactions.
+- The **Bundler package** allows you to interact with our bundler or any other bundler of your choice.
+- The **Paymaster package** can be used with our paymaster or any other of your choice, similar to the bundler package.
+- The **Core Types package** will give us Enums for the proper ChainId we may want to use.
+- The **Modules package** provides access to the different modules that are published for the biconomy SDK.
+- The **Common package** is needed by our accounts package as another dependency.
+- Finally, with `version 5.7.2` of the `ethers` package, we can set our EOA as the account owner.
 
 </details>
 
-Let’s first set up a .env file in the root of our project, this will need a Private Key of any Externally Owned Account (EOA) you would like to serve as the owner of the smart account we create. This is a private key you can get from wallets like MetaMask, TrustWallet, Coinbase Wallet etc. All of these wallets will have tutorials on how to export the Private key. 
+Let’s first set up a `.env` file in the root of our project, this will need a **Private Key** of any **Externally Owned Account (EOA)** you would like to serve as the owner of the Smart Account we create. This is a private key you can get from wallets like MetaMask, TrustWallet, Coinbase Wallet etc. Each of these wallets will include step-by-step guides on how to export the Private key.
 
 ```bash
-PRIVATE_KEY = "enter some private key"
+PRIVATE_KEY = "Enter some private key"
 ```
 
 Let’s give our script the ability to access this environment variable. Delete the console log inside of `src/index.ts` and replace it with the code below. All of our work for the remainder of the tutorial will be in this file. 
@@ -69,7 +70,7 @@ Now our code is configured to access the environment variable as needed.
 
 ## Initialization
 
-Let’s import our bundler package, and providers from the ethers package:
+Start by importing necessary packages for the bundler:
 
 ```typescript
 import { IBundler, Bundler } from '@biconomy/bundler'
@@ -92,180 +93,239 @@ const bundler: IBundler = new Bundler({
 ```
 
 - Now we create an instance of our bundler with the following:
-    - a bundler url which you can retrieve from the Biconomy Dashboard
-    - chain ID, in this case we’re using Polygon Mumbai
-    - and default entry point address imported from the account package
+    - A bundler URL which you can retrieve from the Biconomy Dashboard
+    - Chain ID, in this case, we’re using Polygon Mumbai
+    - Default entry point address imported from the Account package
 
 
 ```typescript
 import {  BiconomySmartAccountV2, DEFAULT_ENTRYPOINT_ADDRESS } from "@biconomy/account"
 ```
 
-Update your import from the account package to also include BiconomySmartAccountV2 which is the class we will be using to create an instance of our smart account.
+Update your import from the Account package to also include `BiconomySmartAccountV2` which is the class we will be using to instantiate our smart account.
 
 ```typescript
 const provider = new ethers.providers.JsonRpcProvider("https://rpc.ankr.com/polygon_mumbai")
 const wallet = new ethers.Wallet(process.env.PRIVATE_KEY || "", provider);
 ```
 
-- We create a provider using a public RPC provider endpoint from ankr, feel free to use any service here such as Infura or Alchemy if you wish.
-- Next we create an instance of the wallet associated to our Private key.
+- We create a provider using a public RPC provider endpoint from Ankr. Feel free to use any service, such as Infura or Alchemy.
+- Next, we create an instance of the wallet associated with our Private key.
 
-One more thing we need to include before we move on is the module for our Smart account. You can learn more about modules here. In this instance we will create this smart account using the ECDSA module. 
+One more thing we need to include before we move on is the module for our Smart Account. You can learn more about modules [here](https://www.biconomy.io/post/making-biconomy-smart-accounts-modular). 
+In this instance, we will create this Smart Account using the ECDSA module. 
 
-First we import our Module: 
+First, we import our Module package: 
 
 ```typescript
 import { ECDSAOwnershipValidationModule, DEFAULT_ECDSA_OWNERSHIP_MODULE } from "@biconomy/modules";
 ```
-Now let's initialize the module and pass it to our account creation config:
+Now let's initialize the module and pass it to our Account Creation Config:
 
 ```typescript
-async function createAccountConfig() {
+async  function  initializeSmartAccount() {
 
-  const module = await ECDSAOwnershipValidationModule.create({
-    signer: wallet,
-    moduleAddress: DEFAULT_ECDSA_OWNERSHIP_MODULE
-  })
+const  module = await ECDSAOwnershipValidationModule.create({
+signer:  wallet,
+moduleAddress:  DEFAULT_ECDSA_OWNERSHIP_MODULE,
+});
 
-  let biconomySmartAccount = await BiconomySmartAccountV2.create({
-  chainId: ChainId.POLYGON_MUMBAI,
-  bundler: bundler, 
-  entryPointAddress: DEFAULT_ENTRYPOINT_ADDRESS,
-  defaultValidationModule: module,
-  activeValidationModule: module
-})
-  console.log("address: ", await biconomySmartAccount.getAccountAddress())
-  return biconomySmartAccount;
+let  biconomyAccount = await BiconomySmartAccountV2.create({
+chainId:  ChainId.POLYGON_MUMBAI,
+bundler:  bundler,
+entryPointAddress:  DEFAULT_ENTRYPOINT_ADDRESS,
+defaultValidationModule:  module,
+activeValidationModule:  module,
+});
+
+// Log the EOA owner's address and the Smart Account address  
+console.log("EOA Owner Address:", wallet.address); console.log("Smart Account Address:", await biconomyAccount.getAccountAddress());
+
+return  biconomyAccount;
 }
-
 ```
 
-:::info
-**Smart Account Creation**: The Smart Account is not created immediately. It will be automatically created when you do the first transaction.
-:::
+The `initializeSmartAccount()` function initiates the creation of a new Smart Account using the `BiconomySmartAccount` class. 
+This setup process involves configuring the account with predefined settings. Upon successful initialization, the function logs:
+1. The owner of the Smart Account, identified as an Externally Owned Account (EOA).
+2. The unique address of the newly created Smart Account.
 
-We create a new instance of the account using the BiconomySmartAccount class and pass it configuration. 
+These steps prepare the Smart Account for use and make its details easily accessible.
 
-We then await the initialization of the account and log out two values to our terminal: the owner of the account and the smart account address. The owner should be the EOA that you got your private key from and the smart account address will be a new address referring to the address of this wallet. 
 :::info
-Smart accounts are counterfactual in nature. We know their address before they are even deployed. In this instance we won’t immediately deploy it, it will automatically be deployed on the first transaction it initiates and the gas needed for deployment will be added to that first transaction.
+Smart accounts are designed with a pre-determined address known prior to deployment, making them counterfactual. The Smart Account (contract) is created automatically during the first transaction, with the gas needed for deployment included.
 :::
 
 :::caution
-Before continuing, now that we have our smart account address we need to fund it with some test network tokens! Since we are using the Polygon Mumbai network head over to the [Polygon Faucet](https://faucet.polygon.technology/) and paste in your smart account address and get some test tokens! If you skip this step you might run into the [AA21 didn't pay prefund error](/troubleshooting/commonerrors.md)!
+Before continuing, now that we have our Smart Account address, we need to fund it with some test network tokens! Since we are using the Polygon Mumbai network head over to the [Polygon Faucet](https://faucet.polygon.technology/) and paste in your smart account address and get some test tokens! If you skip this step, you might run into the [AA21 didn't pay prefund error](/troubleshooting/commonerrors.md)!
 :::
-Once you have tokens available it is time to start constructing our first userOps for a native transfer.
 
+Once you have tokens available, it is time to start constructing our first userOps for a native transfer.
+
+## Build you first userOp (Transaction)
+
+Let's create your first **user operation (userOp)** for the transaction. Here are the details it needs:
+
+- `to`: The address towards which this interaction is directed. (Feel free to change to your own or send me more test tokens 😉)
+- `data`: We are defaulting to `0x` as no specific data is needed for native transfers.
+- `value`: We need to indicate the amount we want to transfer and format it correctly using the `parseEther` utility function.
+
+Then we'll now build the userOp. You can log the partial userOp if you want. We'll add `0x` to the `paymasterAndData` value to make it a regular transaction where the end user pays for the gas.
+
+```typescript
+async function buildUserOp(smartAccount: BiconomySmartAccountV2) {
+  try {
+    const transaction = {
+        to: '0x322Af0da66D00be980C7aa006377FCaaEee3BDFD',
+        data: '0x',
+        value: ethers.utils.parseEther('0.01'),
+    };
+
+    const userOp = await smartAccount.buildUserOp([transaction]);
+    userOp.paymasterAndData = "0x";
+    return userOp;
+  } catch (error: unknown) {
+    if (error instanceof Error) {
+      console.error("Error building user operation:", error.message);
+    }
+  }
+}
+```
 
 ## Execute your first userOp
 
+With our `buildUserOp` function set to create user operations, we'll now use it inside the `submitUserOp` function.
+
 ```typescript
-async function createTransaction() {
-  console.log("creating account")
+async function submitUserOp() {
+  try {
+    // Initialize your Smart Account
+    const smartAccount = await initializeSmartAccount();
+  
+    // Build the user operation
+    const userOp = await buildUserOp(smartAccount);
+    if (!userOp) {
+      console.error("Error: Could not create the user operation.");
+      return;
+    }
 
-  const smartAccount = await createAccountConfig();
-
-  const transaction = {
-    to: '0x322Af0da66D00be980C7aa006377FCaaEee3BDFD',
-    data: '0x',
-    value: ethers.utils.parseEther('0.1'),
+    // Send the user operation and wait for the transaction to complete
+    const userOpResponse = await smartAccount.sendUserOp(userOp);
+    const transactionDetails = await userOpResponse.wait();
+  
+    console.log("See your transaction details here:");
+    console.log(`https://mumbai.polygonscan.com/tx/${transactionDetails.receipt.transactionHash}`);
+  } catch (error: unknown) {
+    if (error instanceof Error) {
+      console.error("Transaction Error:", error.message);
+    }
   }
-
-  const userOp = await smartAccount.buildUserOp([transaction])
-  userOp.paymasterAndData = "0x"
-
-  const userOpResponse = await smartAccount.sendUserOp(userOp)
-
-  const transactionDetail = await userOpResponse.wait()
-
-  console.log("transaction detail below")
-      console.log(`https://mumbai.polygonscan.com/tx/${transactionDetail.receipt.transactionHash}`)
 }
-
-createTransaction()
 ```
+1. We send the `userOp` to our bundler. 
+2. We save the response in a variable called `userOpResponse`. 
+3. We retrieve the transaction detail by calling `userOpResponse.wait()`.  
 
-Let’s move the call to create account into the create transaction function and have it assigned to the value smartAccount. 
-
-Now we need to construct our transaction which will take the following values: 
-
-- `to`: the address this interaction is directed towards, (in this case here is an address I own, feel free to change this to your own or send me more test tokens)
-- `data`: we are defaulting to ‘0x’ as we do not need to send any specific data for this transaction to work since it is a native transfer
-- `value`: we indicate the amount we would like to transfer here and use the `parseEther` utility function to make sure our value is formatted the way we need it to be
-
-Next up is building the userOp, feel free to add an additional log here if you would like to see how the partial userOp looks in this case. We’re also going to add “0x” for the paymasterAndData value as we just want this to be a regular transaction where the gas is paid for by the end user. 
-
-Finally we send the userOp and save the value to a variable named userOpResponse and get the transactionDetail after calling `userOpResponse.wait()`. This function can optionally take a number to specify the amount of network confirmations you would like before returning a value. For example, if you passed `userOpResponse.wait(5)` this would wait for 5 confirmations on the network before giving you the necessary value. 
+_To wait for a specific number of network confirmations before getting the value, use `wait()` with a number argument. 
+For instance, `userOpResponse.wait(5)` waits for 5 confirmations before returning the value._
 
 Check out the long transaction details available now in your console! You just created and executed your first userOps using the Biconomy SDK! 
 
 <details>
-  <summary> Click to view final code </summary>
+  <summary>View Complete Code</summary>
 
 ```typescript
-import { config } from "dotenv"
-import { IBundler, Bundler } from '@biconomy/bundler'
-import { ChainId } from "@biconomy/core-types"
-import { BiconomySmartAccountV2, DEFAULT_ENTRYPOINT_ADDRESS } from "@biconomy/account"
+// Import necessary modules and packages
+import { config } from "dotenv";
+import { IBundler, Bundler } from '@biconomy/bundler';
+import { ChainId } from "@biconomy/core-types";
+import { BiconomySmartAccountV2, DEFAULT_ENTRYPOINT_ADDRESS } from "@biconomy/account";
 import { ECDSAOwnershipValidationModule, DEFAULT_ECDSA_OWNERSHIP_MODULE } from "@biconomy/modules";
 import { ethers } from 'ethers';
 
-config()
+// Initialize dotenv to use environment variables
+config();
 
-const provider = new ethers.providers.JsonRpcProvider("https://rpc.ankr.com/polygon_mumbai")
+const provider = new ethers.providers.JsonRpcProvider("https://rpc.ankr.com/polygon_mumbai");
 const wallet = new ethers.Wallet(process.env.PRIVATE_KEY || "", provider);
 
+// Set up the Biconomy bundler with specific parameters
 const bundler: IBundler = new Bundler({
   bundlerUrl: 'https://bundler.biconomy.io/api/v2/80001/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44',     
   chainId: ChainId.POLYGON_MUMBAI,
   entryPointAddress: DEFAULT_ENTRYPOINT_ADDRESS,
-})
+});
 
-  async function createAccountConfig() {
-    const module = await ECDSAOwnershipValidationModule.create({
+// Function to create and configure a Biconomy Smart Account
+async function initializeSmartAccount() {
+  const module = await ECDSAOwnershipValidationModule.create({
     signer: wallet,
     moduleAddress: DEFAULT_ECDSA_OWNERSHIP_MODULE
-    })
+  });
 
-    let biconomyAccount = await BiconomySmartAccountV2.create({
-      chainId: ChainId.POLYGON_MUMBAI,
-      bundler: bundler, 
-      entryPointAddress: DEFAULT_ENTRYPOINT_ADDRESS,
-      defaultValidationModule: module,
-      activeValidationModule: module
-    })
-    console.log("address", biconomyAccount.accountAddress)
-    return biconomyAccount
-  }
+  let biconomyAccount = await BiconomySmartAccountV2.create({
+    chainId: ChainId.POLYGON_MUMBAI,
+    bundler: bundler, 
+    entryPointAddress: DEFAULT_ENTRYPOINT_ADDRESS,
+    defaultValidationModule: module,
+    activeValidationModule: module
+  });
+// Log the EOA owner's address and the Smart Account address
+console.log("EOA Owner Address:", wallet.address); console.log("Smart Account Address:", await biconomyAccount.getAccountAddress());
+  return biconomyAccount;
+}
 
-  async function createTransaction() {
-    const smartAccount = await createAccountConfig();
-    try {
-      const transaction = {
+// Function to build a user operation (transaction)
+async function buildUserOp(smartAccount: BiconomySmartAccountV2) {
+  try {
+    const transaction = {
         to: '0x322Af0da66D00be980C7aa006377FCaaEee3BDFD',
         data: '0x',
-        value: ethers.utils.parseEther('0.1'),
-      }
-    
-      const userOp = await smartAccount.buildUserOp([transaction])
-      userOp.paymasterAndData = "0x"
-    
-      const userOpResponse = await smartAccount.sendUserOp(userOp)
-    
-      const transactionDetail = await userOpResponse.wait()
-    
-      console.log("transaction detail below")
-      console.log(`https://mumbai.polygonscan.com/tx/${transactionDetail.receipt.transactionHash}`)
-    } catch (error) {
-      console.log(error)
+        value: ethers.utils.parseEther('0.0001'),
+    };
+
+// Build the user operation using the smart account
+    const userOp = await smartAccount.buildUserOp([transaction]);
+    userOp.paymasterAndData = "0x";
+    return userOp;
+  } catch (error: unknown) {
+    if (error instanceof Error) {
+      console.error("Error building user operation:", error.message);
     }
   }
+}
 
-  createTransaction()
+// Function to submit the user operation
+async function submitUserOp() {
+  try {
+  // Create the smart account configuration
+    const smartAccount = await initializeSmartAccount();
+  
+  // Build the user operation for the transaction
+    const userOp = await buildUserOp(smartAccount);
+    if (!userOp) {
+      console.error("Failed to build user operation.");
+      return;
+    }
+
+// Send the user operation and await the transaction details
+    const userOpResponse = await smartAccount.sendUserOp(userOp);
+    const transactionDetail = await userOpResponse.wait();
+  
+    console.log("Transaction detail below:");
+    console.log(`https://mumbai.polygonscan.com/tx/${transactionDetail.receipt.transactionHash}`);
+  } catch (error: unknown) {
+    if (error instanceof Error) {
+      console.error("Error creating transaction:", error.message);
+    }
+  }
+}
+
+// Execute the function to start the transaction process
+submitUserOp();
 ```
 
 </details>
 
-Now that you have completed our quickstart take a look at exploring further usecases in our Quick Explore guide or our Node JS guides!
-
+🎉 **Congratulations on completing the quickstart!** 
+To dive deeper, check out more use cases in our Quick Explore guide or explore our Node.js guides for additional insights.
