--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_label: 'Quickstart'
+sidebar_label: "Quickstart"
 sidebar_position: 2
 ---
 
 # Quickstart: Smart Account Native Transfer
 
-In this guide, we will create a basic Node.js script using **TypeScript** with an implementation of the **Smart Account Package** from the Biconomy SDK. You will learn how to create a **Smart Account** and perform **user operations** by sending a native transfer of tokens. 
+In this guide, we will create a basic Node.js script using **TypeScript** with an implementation of the **Smart Account Package** from the Biconomy SDK. You will learn how to create a **Smart Account** and perform **user operations** by sending a native transfer of tokens.
 
 :::info
 Please note that this tutorial assumes you have Node JS installed on your computer and have some working knowledge of Node.
@@ -23,7 +23,7 @@ We will clone a preconfigured Node.js project with TypeScript support to get sta
 git clone git@github.com:bcnmy/quickstart.git
 ```
 
-Note that this is the `SSH` example. Use `HTTP` or `GithubCli` options if you prefer. 
+Note that this is the `SSH` example. Use `HTTP` or `GithubCli` options if you prefer.
 
 ```bash
 git clone https://github.com/bcnmy/quickstart.git
@@ -35,8 +35,9 @@ Once you have the repository on your local machine, install all dependencies usi
 yarn install
 yarn dev
 ```
-After running these two commands you should see the printed statement `Hello World!` in your terminal. 
-Any changes made to the `index.ts` file in the src directory should now automatically run in your terminal upon saving. 
+
+After running these two commands you should see the printed statement `Hello World!` in your terminal.
+Any changes made to the `index.ts` file in the src directory should now automatically run in your terminal upon saving.
 
 All packages you need for this guide are configured and installed for you. Check out the `package.json` file if you want to explore the dependencies.
 
@@ -59,94 +60,107 @@ Let’s first set up a `.env` file in the root of our project, this will need a 
 PRIVATE_KEY = "Enter some private key"
 ```
 
-Let’s give our script the ability to access this environment variable. Delete the console log inside of `src/index.ts` and replace it with the code below. All of our work for the remainder of the tutorial will be in this file. 
+Let’s give our script the ability to access this environment variable. Delete the console log inside of `src/index.ts` and replace it with the code below. All of our work for the remainder of the tutorial will be in this file.
 
 ```typescript
-import { config } from "dotenv"
+import { config } from "dotenv";
 
-config()
+config();
 ```
-Now our code is configured to access the environment variable as needed. 
+
+Now our code is configured to access the environment variable as needed.
 
 ## Initialization
 
 Start by importing necessary packages for the bundler:
 
 ```typescript
-import { IBundler, Bundler } from '@biconomy/bundler'
-import { DEFAULT_ENTRYPOINT_ADDRESS } from "@biconomy/account"
-import { ethers } from 'ethers'
-import { ChainId } from "@biconomy/core-types"
+import { IBundler, Bundler } from "@biconomy/bundler";
+import { DEFAULT_ENTRYPOINT_ADDRESS } from "@biconomy/account";
+import { ethers } from "ethers";
+import { ChainId } from "@biconomy/core-types";
 ```
 
-IBundler is the typing for the Bundler class that we will create a new instance of. 
-
+IBundler is the typing for the Bundler class that we will create a new instance of.
 
 ### **Initial Configuration**
 
 ```typescript
 const bundler: IBundler = new Bundler({
-    bundlerUrl: 'https://bundler.biconomy.io/api/v2/80001/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44',     
-    chainId: ChainId.POLYGON_MUMBAI,
-    entryPointAddress: DEFAULT_ENTRYPOINT_ADDRESS,
-  })
+  bundlerUrl:
+    "https://bundler.biconomy.io/api/v2/80001/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
+  chainId: ChainId.POLYGON_MUMBAI,
+  entryPointAddress: DEFAULT_ENTRYPOINT_ADDRESS,
+});
 ```
 
 - Now we create an instance of our bundler with the following:
-    - A bundler URL which you can retrieve from the Biconomy Dashboard
-    - Chain ID, in this case, we’re using Polygon Mumbai
-    - Default entry point address imported from the Account package
-
+  - A bundler URL which you can retrieve from the Biconomy Dashboard
+  - Chain ID, in this case, we’re using Polygon Mumbai
+  - Default entry point address imported from the Account package
 
 ```typescript
-import {  BiconomySmartAccountV2, DEFAULT_ENTRYPOINT_ADDRESS } from "@biconomy/account"
+import {
+  BiconomySmartAccountV2,
+  DEFAULT_ENTRYPOINT_ADDRESS,
+} from "@biconomy/account";
 ```
 
 Update your import from the Account package to also include `BiconomySmartAccountV2` which is the class we will be using to instantiate our smart account.
 
 ```typescript
-const provider = new ethers.providers.JsonRpcProvider("https://rpc.ankr.com/polygon_mumbai")
+const provider = new ethers.providers.JsonRpcProvider(
+  "https://rpc.ankr.com/polygon_mumbai",
+);
 const wallet = new ethers.Wallet(process.env.PRIVATE_KEY || "", provider);
 ```
 
 - We create a provider using a public RPC provider endpoint from Ankr. Feel free to use any service, such as Infura or Alchemy.
 - Next, we create an instance of the wallet associated with our Private key.
 
-One more thing we need to include before we move on is the module for our Smart Account. You can learn more about modules [here](https://www.biconomy.io/post/making-biconomy-smart-accounts-modular). 
-In this instance, we will create this Smart Account using the ECDSA module. 
+One more thing we need to include before we move on is the module for our Smart Account. You can learn more about modules [here](https://www.biconomy.io/post/making-biconomy-smart-accounts-modular).
+In this instance, we will create this Smart Account using the ECDSA module.
 
-First, we import our Module package: 
+First, we import our Module package:
 
 ```typescript
-import { ECDSAOwnershipValidationModule, DEFAULT_ECDSA_OWNERSHIP_MODULE } from "@biconomy/modules";
+import {
+  ECDSAOwnershipValidationModule,
+  DEFAULT_ECDSA_OWNERSHIP_MODULE,
+} from "@biconomy/modules";
 ```
+
 Now let's initialize the module and pass it to our Account Creation Config:
 
 ```typescript
-async  function  initializeSmartAccount() {
+async function initializeSmartAccount() {
+  const module = await ECDSAOwnershipValidationModule.create({
+    signer: wallet,
+    moduleAddress: DEFAULT_ECDSA_OWNERSHIP_MODULE,
+  });
 
-const  module = await ECDSAOwnershipValidationModule.create({
-signer:  wallet,
-moduleAddress:  DEFAULT_ECDSA_OWNERSHIP_MODULE,
-});
+  let biconomyAccount = await BiconomySmartAccountV2.create({
+    chainId: ChainId.POLYGON_MUMBAI,
+    bundler: bundler,
+    entryPointAddress: DEFAULT_ENTRYPOINT_ADDRESS,
+    defaultValidationModule: module,
+    activeValidationModule: module,
+  });
 
-let  biconomyAccount = await BiconomySmartAccountV2.create({
-chainId:  ChainId.POLYGON_MUMBAI,
-bundler:  bundler,
-entryPointAddress:  DEFAULT_ENTRYPOINT_ADDRESS,
-defaultValidationModule:  module,
-activeValidationModule:  module,
-});
+  // Log the EOA owner's address and the Smart Account address
+  console.log("EOA Owner Address:", wallet.address);
+  console.log(
+    "Smart Account Address:",
+    await biconomyAccount.getAccountAddress(),
+  );
 
-// Log the EOA owner's address and the Smart Account address  
-console.log("EOA Owner Address:", wallet.address); console.log("Smart Account Address:", await biconomyAccount.getAccountAddress());
-
-return  biconomyAccount;
+  return biconomyAccount;
 }
 ```
 
-The `initializeSmartAccount()` function initiates the creation of a new Smart Account using the `BiconomySmartAccount` class. 
+The `initializeSmartAccount()` function initiates the creation of a new Smart Account using the `BiconomySmartAccount` class.
 This setup process involves configuring the account with predefined settings. Upon successful initialization, the function logs:
+
 1. The owner of the Smart Account, identified as an Externally Owned Account (EOA).
 2. The unique address of the newly created Smart Account.
 
@@ -176,9 +190,9 @@ Then we'll now build the userOp. You can log the partial userOp if you want. We'
 async function buildUserOp(smartAccount: BiconomySmartAccountV2) {
   try {
     const transaction = {
-        to: '0x322Af0da66D00be980C7aa006377FCaaEee3BDFD',
-        data: '0x',
-        value: ethers.utils.parseEther('0.01'),
+      to: "0x322Af0da66D00be980C7aa006377FCaaEee3BDFD",
+      data: "0x",
+      value: ethers.utils.parseEther("0.01"),
     };
 
     const userOp = await smartAccount.buildUserOp([transaction]);
@@ -201,7 +215,7 @@ async function submitUserOp() {
   try {
     // Initialize your Smart Account
     const smartAccount = await initializeSmartAccount();
-  
+
     // Build the user operation
     const userOp = await buildUserOp(smartAccount);
     if (!userOp) {
@@ -212,9 +226,11 @@ async function submitUserOp() {
     // Send the user operation and wait for the transaction to complete
     const userOpResponse = await smartAccount.sendUserOp(userOp);
     const transactionDetails = await userOpResponse.wait();
-  
+
     console.log("See your transaction details here:");
-    console.log(`https://mumbai.polygonscan.com/tx/${transactionDetails.receipt.transactionHash}`);
+    console.log(
+      `https://mumbai.polygonscan.com/tx/${transactionDetails.receipt.transactionHash}`,
+    );
   } catch (error: unknown) {
     if (error instanceof Error) {
       console.error("Transaction Error:", error.message);
@@ -222,14 +238,15 @@ async function submitUserOp() {
   }
 }
 ```
-1. We send the `userOp` to our bundler. 
-2. We save the response in a variable called `userOpResponse`. 
-3. We retrieve the transaction detail by calling `userOpResponse.wait()`.  
 
-_To wait for a specific number of network confirmations before getting the value, use `wait()` with a number argument. 
+1. We send the `userOp` to our bundler.
+2. We save the response in a variable called `userOpResponse`.
+3. We retrieve the transaction detail by calling `userOpResponse.wait()`.
+
+_To wait for a specific number of network confirmations before getting the value, use `wait()` with a number argument.
 For instance, `userOpResponse.wait(5)` waits for 5 confirmations before returning the value._
 
-Check out the long transaction details available now in your console! You just created and executed your first userOps using the Biconomy SDK! 
+Check out the long transaction details available now in your console! You just created and executed your first userOps using the Biconomy SDK!
 
 <details>
   <summary>View Complete Code</summary>
@@ -237,21 +254,30 @@ Check out the long transaction details available now in your console! You just c
 ```typescript
 // Import necessary modules and packages
 import { config } from "dotenv";
-import { IBundler, Bundler } from '@biconomy/bundler';
+import { IBundler, Bundler } from "@biconomy/bundler";
 import { ChainId } from "@biconomy/core-types";
-import { BiconomySmartAccountV2, DEFAULT_ENTRYPOINT_ADDRESS } from "@biconomy/account";
-import { ECDSAOwnershipValidationModule, DEFAULT_ECDSA_OWNERSHIP_MODULE } from "@biconomy/modules";
-import { ethers } from 'ethers';
+import {
+  BiconomySmartAccountV2,
+  DEFAULT_ENTRYPOINT_ADDRESS,
+} from "@biconomy/account";
+import {
+  ECDSAOwnershipValidationModule,
+  DEFAULT_ECDSA_OWNERSHIP_MODULE,
+} from "@biconomy/modules";
+import { ethers } from "ethers";
 
 // Initialize dotenv to use environment variables
 config();
 
-const provider = new ethers.providers.JsonRpcProvider("https://rpc.ankr.com/polygon_mumbai");
+const provider = new ethers.providers.JsonRpcProvider(
+  "https://rpc.ankr.com/polygon_mumbai",
+);
 const wallet = new ethers.Wallet(process.env.PRIVATE_KEY || "", provider);
 
 // Set up the Biconomy bundler with specific parameters
 const bundler: IBundler = new Bundler({
-  bundlerUrl: 'https://bundler.biconomy.io/api/v2/80001/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44',     
+  bundlerUrl:
+    "https://bundler.biconomy.io/api/v2/80001/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
   chainId: ChainId.POLYGON_MUMBAI,
   entryPointAddress: DEFAULT_ENTRYPOINT_ADDRESS,
 });
@@ -260,18 +286,22 @@ const bundler: IBundler = new Bundler({
 async function initializeSmartAccount() {
   const module = await ECDSAOwnershipValidationModule.create({
     signer: wallet,
-    moduleAddress: DEFAULT_ECDSA_OWNERSHIP_MODULE
+    moduleAddress: DEFAULT_ECDSA_OWNERSHIP_MODULE,
   });
 
   let biconomyAccount = await BiconomySmartAccountV2.create({
     chainId: ChainId.POLYGON_MUMBAI,
-    bundler: bundler, 
+    bundler: bundler,
     entryPointAddress: DEFAULT_ENTRYPOINT_ADDRESS,
     defaultValidationModule: module,
-    activeValidationModule: module
+    activeValidationModule: module,
   });
-// Log the EOA owner's address and the Smart Account address
-console.log("EOA Owner Address:", wallet.address); console.log("Smart Account Address:", await biconomyAccount.getAccountAddress());
+  // Log the EOA owner's address and the Smart Account address
+  console.log("EOA Owner Address:", wallet.address);
+  console.log(
+    "Smart Account Address:",
+    await biconomyAccount.getAccountAddress(),
+  );
   return biconomyAccount;
 }
 
@@ -279,12 +309,12 @@ console.log("EOA Owner Address:", wallet.address); console.log("Smart Account Ad
 async function buildUserOp(smartAccount: BiconomySmartAccountV2) {
   try {
     const transaction = {
-        to: '0x322Af0da66D00be980C7aa006377FCaaEee3BDFD',
-        data: '0x',
-        value: ethers.utils.parseEther('0.0001'),
+      to: "0x322Af0da66D00be980C7aa006377FCaaEee3BDFD",
+      data: "0x",
+      value: ethers.utils.parseEther("0.0001"),
     };
 
-// Build the user operation using the smart account
+    // Build the user operation using the smart account
     const userOp = await smartAccount.buildUserOp([transaction]);
     userOp.paymasterAndData = "0x";
     return userOp;
@@ -298,22 +328,24 @@ async function buildUserOp(smartAccount: BiconomySmartAccountV2) {
 // Function to submit the user operation
 async function submitUserOp() {
   try {
-  // Create the smart account configuration
+    // Create the smart account configuration
     const smartAccount = await initializeSmartAccount();
-  
-  // Build the user operation for the transaction
+
+    // Build the user operation for the transaction
     const userOp = await buildUserOp(smartAccount);
     if (!userOp) {
       console.error("Failed to build user operation.");
       return;
     }
 
-// Send the user operation and await the transaction details
+    // Send the user operation and await the transaction details
     const userOpResponse = await smartAccount.sendUserOp(userOp);
     const transactionDetail = await userOpResponse.wait();
-  
+
     console.log("Transaction detail below:");
-    console.log(`https://mumbai.polygonscan.com/tx/${transactionDetail.receipt.transactionHash}`);
+    console.log(
+      `https://mumbai.polygonscan.com/tx/${transactionDetail.receipt.transactionHash}`,
+    );
   } catch (error: unknown) {
     if (error instanceof Error) {
       console.error("Error creating transaction:", error.message);
@@ -327,5 +359,5 @@ submitUserOp();
 
 </details>
 
-🎉 **Congratulations on completing the quickstart!** 
+🎉 **Congratulations on completing the quickstart!**
 To dive deeper, check out more use cases in our Quick Explore guide or explore our Node.js guides for additional insights.
