Add troubleshooting link in quickstart

--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -263,6 +263,7 @@ const bundler: IBundler = new Bundler({
 ```
 
 </details>
+If you are facing any error, do checkout the [troubleshooting](/troubleshooting/commonerrors) for common errors.
 
 Now that you have completed our quickstart take a look at exploring further usecases in our Quick Explore guide or our Node JS guides!
 
