--- a/docs/Modules/ecdsa/ecdsasdk.mdx
+++ b/docs/Modules/ecdsa/ecdsasdk.mdx
@@ -2,6 +2,7 @@
 sidebar_label: "SDK Usage"
 sidebar_position: 3
 ---
+
 # ECDSA Ownership Module Integration Guide
 
 ````mdx
@@ -14,26 +15,34 @@ Integrate the ECDSA Validation Module into Biconomy Smart Accounts for enhanced 
 
 ## Setup and Installation 🛠️
 
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
+
 <Tabs>
-<TabItem value="npm" label="npm">
+<TabItem value="js" label="npm">
 
 ```bash
+
 npm install @biconomy/modules ethers
+
 ```
-````
 
 </TabItem>
-<TabItem value="yarn" label="yarn">
+<TabItem value="py" label="yarn">
 
 ```bash
+
 yarn add @biconomy/modules ethers
+
 ```
 
 </TabItem>
-<TabItem value="pnpm" label="pnpm">
+<TabItem value="java" label="pnpm">
 
 ```bash
+
 pnpm add @biconomy/modules ethers
+
 ```
 
 </TabItem>
@@ -81,3 +90,4 @@ The address of the Smart Account is counterfactually generated based on the init
 ## Conclusion ✨
 
 Integrate the ECDSA Validation Module to enhance security in your Biconomy-based applications, leveraging the SDK for streamlined setup and account creation.
+````
