📝  update ecdsa sdk

--- a/docs/Modules/ecdsa/ecdsasdk.mdx
+++ b/docs/Modules/ecdsa/ecdsasdk.mdx
@@ -3,19 +3,16 @@ sidebar_label: "SDK Usage"
 sidebar_position: 3
 ---
 
-# ECDSA Ownership Module Integration Guide
-
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-# Introduction 📘
+# ECDSA Ownership Module Integration Guide
+
+## Introduction 📘
 
 Integrate the ECDSA Validation Module into Biconomy Smart Accounts for enhanced transaction security and user authentication using the SDK.
 
 ## Setup and Installation 🛠️
-
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
 
 <Tabs>
 <TabItem value="js" label="npm">
