--- a/docs/Modules/ecdsa/ecdsavalidationmodule.mdx
+++ b/docs/Modules/ecdsa/ecdsavalidationmodule.mdx
@@ -51,11 +51,10 @@ In **Biconomy's Modular Smart Account**, module management is streamlined and ef
 
 ### Examples of Case Studies 📚
 
-Imagine a user wanting to log into a decentralized application (dApp) using their Smart Account. The **ECDSA Validation Module** facilitates this process by verifying the user's ownership through their EOA. This module ensures secure, seamless access to the dApp. Such practical applications highlight the module's utility in everyday blockchain interactions.
+Imagine a user wanting to log into a decentralized application (dApp) using their Smart Account. The **ECDSA Validation Module** facilitates this process by verifying the user's ownership through their EOA. This module ensures secure, seamless access to dApps or interaction with Smart Contracts. Such practical applications highlight the module's utility in everyday blockchain interactions.
 
 :::note
-Case studies provide practical insights into how the ECDSA Validation Module enhances user experience in blockchain applications.
-:::
+Such integration, especially when combined with MPC providers like Web3Auth or Silent Shard, streamlines access much like a traditional web2 experience, ensuring both security and ease of use.:::
 
 ## Conclusion ✨
 
