--- a/docs/Modules/ecdsa/ecdsasdk.mdx
+++ b/docs/Modules/ecdsa/ecdsasdk.mdx
@@ -1,6 +1,7 @@
 ---
 sidebar_label: "SDK Usage"
 sidebar_position: 3
+sidebar_custom_props: "Learn to integrate the ECDSA Module using Biconomy SDK"
 ---
 
 import Tabs from "@theme/Tabs";
