--- a/docs/Modules/ecdsa/ecdsavalidationmodule.mdx
+++ b/docs/Modules/ecdsa/ecdsavalidationmodule.mdx
@@ -1,6 +1,7 @@
 ---
 sidebar_label: "What is ECDSA Module"
 sidebar_position: 1
+description: "Overview of ECDSA Validation Module's role in Smart Accounts"
 ---
 
 ## Introduction 📄
