--- a/docs/Modules/ecdsa/ecdsasmartcontracts.mdx
+++ b/docs/Modules/ecdsa/ecdsasmartcontracts.mdx
@@ -1,6 +1,7 @@
 ---
 sidebar_label: "Smart Contract Deep Dive"
 sidebar_position: 2
+description: "In-depth smart contract insights into Biconomy's ECDSA Ownership Registry Module."
 ---
 
 # 📜 Smart Contract Deep Dive 🛠️
