🩹  fix broken link

--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -4,7 +4,7 @@ sidebar_position: 3
 
 # Multichain Validation Module
 
-This module acts as an extention of the [ECDSA Module](/Modules/ecdsa). The added benefit of this module is you now have the ability to use a single signer accross multiple blockchain networks. This allows you now to completely abstract away the chain that the user is interacting with.
+This module acts as an extention of the [ECDSA Module](/Modules/ecdsa/ecdsasdk). The added benefit of this module is you now have the ability to use a single signer accross multiple blockchain networks. This allows you now to completely abstract away the chain that the user is interacting with.
 
 ## Installation
 
